docs(phase-0): capture working dev setup and dual-JDK reality
Phase 0 exit gate met: built, packaged, launched server, launched
Swing client, played one game vs AI on the unmodified system. Captured
the full reproducible setup in docs/dev-setup.md. Documented two
discoveries that the Phase 0 spike surfaced:

1. Dual-JDK requirement. Build with JDK 17+ (one toolchain compiles
   upstream Java 8 modules via --release 8 plus our future WebApi),
   but run upstream jars with JDK 8. JBoss Remoting 2.5.4 uses
   pre-module-system reflection that JDK 9+ rejects with
   InaccessibleObjectException on java.io.ObjectOutputStream; the
   client surfaces a "Wrong java version" popup. Phase 1 spike will
   evaluate whether --add-opens flags allow a single modern JDK.

2. Auto-connect cache. The client's Java Preferences (registry under
   HKCU\Software\JavaSoft\Prefs\mage\client) may carry over a public
   server from a previous Xmage launcher install, causing
   "Unable connect to server" against our local v1.4.58 build.
   Pin via PowerShell Set-ItemProperty (reg.exe rejects the slash
   in server/Address as a switch char).

Updates touch only our owned files (CLAUDE.md and docs/), preserving
upstream rebase compatibility.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>